I don't understand <xxxyyyyzzz> .... ?

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Home Page</title>
 </head>
 <body>
+    <h1>Home Page</h1>
     <a href="contacts-page.html">Contacts Page</a>
+    <!-- <xxxyyyzzz></xxxyyyzzz> WTH ? -->
 </body>
 </html>
