--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <h1>Home Page</h1>
     <a href="contacts-page.html">Contacts Page</a>
     <!-- <xxxyyyzzz></xxxyyyzzz> WTH ? -->
+    
+    <p>Experimental code</p>
 </body>
 </html>
