--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <h1>Home Page</h1>
     <a href="contacts-page.html">Contacts Page</a>
     <!-- <xxxyyyzzz></xxxyyyzzz> WTH ? -->
+    <div>
+        This is a local change
+    </div>
 </body>
 </html>
